--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
 <head>
 </head>
-<body>
-	<video controls preload >
-		<source src="../big_buck_bunny_480p.webm" type="video/webm">
+<body style="background-color:black">
+	<video controls preload style="width:80%">
+		<source src="https://mabox.org/torrent/downloads/Peep%20Show/Peep%20Show%20-%2001x02%20-%20The%20Interview.webm" type="video/webm">
 	</video>
 </div>
 </body>
